--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,21 +10,24 @@
     "export": "next build && next export"
   },
   "dependencies": {
+    "@copilotkit/react-core": "^1.9.3",
+    "@copilotkit/react-ui": "^1.9.3",
+    "axios": "^1.6.0",
+    "framer-motion": "^12.23.9",
+    "lucide-react": "^0.292.0",
     "next": "14.0.0",
     "react": "^18",
-    "react-dom": "^18",
-    "axios": "^1.6.0",
-    "lucide-react": "^0.292.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.0"
+    "typescript": "^5"
   }
-} 
+}
