--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "AI Chat Platform with Hono Backend and Next.js Frontend",
   "main": "src/app.js",
   "scripts": {
-    "dev": "node src/app.js",
-    "start": "node src/app.js",
+    "dev": "bun run src/app.js",
+    "start": "bun run src/app.js",
     "build": "echo 'No build step needed for Hono'",
-    "test": "echo 'No tests specified'"
+    "test": "echo 'No tests specified'",
+    "vercel-build": "echo 'Build step for Vercel'"
   },
   "keywords": [
     "ai",
