--- a/env.example
+++ b/env.example
@@ -5,9 +5,10 @@ GEMINI_API_KEY=your_gemini_api_key_here
 PORT=3001
 NODE_ENV=development
 
-# Database Configuration (for future use)
-# DB_HOST=localhost
-# DB_PORT=5432
-# DB_NAME=findlanqbot
-# DB_USER=username
-# DB_PASSWORD=password 
+# Database Configuration
+# For Turso (Cloud SQLite)
+TURSO_DATABASE_URL=your_turso_database_url_here
+TURSO_AUTH_TOKEN=your_turso_auth_token_here
+
+# For local SQLite (if TURSO_DATABASE_URL is not set)
+# Local SQLite will be used automatically 
