--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@langchain/google-genai": "^0.2.16",
+    "@libsql/client": "^0.14.0",
     "axios": "^1.6.0",
     "dotenv": "^16.3.1",
     "hono": "^3.12.0",
