--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "dev": "bun run src/app.js",
     "start": "node src/app.js",
-    "build": "echo 'Build completed successfully'",
+    "build": "echo 'Build completed successfully for Vercel'",
     "test": "echo 'No tests specified'",
-    "vercel-build": "echo 'Vercel build completed'"
+    "vercel-build": "echo 'Vercel build completed - no server initialization needed'"
   },
   "keywords": [
     "ai",
