به‌روزرسانی فایل‌های پیکربندی Vercel و تغییر اسکریپت build در package.json برای ایجاد دایرکتوری خروجی. همچنین، حذف فایل api/app.js به منظور ساده‌سازی ساختار پروژه و بهبود عملکرد. این تغییرات به بهینه‌سازی فرآیند دیپلوی و سازگاری با محیط Vercel کمک می‌کند.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node src/app.js",
     "build": "echo 'Build completed successfully for Vercel'",
     "test": "echo 'No tests specified'",
-    "vercel-build": "echo 'Vercel build completed - no server initialization needed'"
+    "vercel-build": "mkdir -p .vercel/output && echo 'Vercel build completed - no output directory needed for serverless functions'"
   },
   "keywords": [
     "ai",
