--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "hono": "^3.12.0",
     "langchain": "^0.3.30",
     "mammoth": "^1.9.1",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "busboy": "^1.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
