اضافه کردن وابستگی formidable به package.json و به‌روزرسانی مستندات HTML برای توضیحات جدید در مورد آپلود فایل‌های Word. همچنین، بهبود پردازش فایل‌های آپلود شده با استفاده از formidable و اضافه کردن راهنمای استفاده از endpoint آپلود فایل.

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "langchain": "^0.3.30",
     "mammoth": "^1.9.1",
     "sqlite3": "^5.1.6",
-    "busboy": "^1.6.0"
+    "busboy": "^1.6.0",
+    "formidable": "^3.5.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
