به‌روزرسانی پیکربندی Vercel با اضافه کردن نسخه و تنظیمات جدید برای ساخت و توزیع API و فایل‌های استاتیک. همچنین، حذف فایل‌های قدیمی مربوط به استقرار در AWS و سرور. بهبود رابط کاربری با استفاده از انیمیشن‌ها و بهینه‌سازی کد در صفحه مشاوره فنلاند کیو.

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,15 @@
 {
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/**/*.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "public/**/*",
+      "use": "@vercel/static"
+    }
+  ],
   "functions": {
     "api/index.js": {
       "maxDuration": 30
@@ -8,10 +19,14 @@
       "memory": 1024
     }
   },
-  "rewrites": [
+  "routes": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api"
+      "src": "/api/(.*)",
+      "dest": "/api/index.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/public/$1"
     }
   ]
 } 
