به‌روزرسانی اسکریپت‌های package.json با تغییر متن پیام‌های ساخت و به‌روزرسانی نسخه Node.js به ۱۸.۰.۰ یا بالاتر. این تغییرات به بهبود شفافیت در فرآیند ساخت API کمک می‌کند.

--- a/.vercelignore
+++ b/.vercelignore
@@ -17,4 +17,14 @@ data/
 README.md
 SETUP.md
 test-*.txt
-frontend/ 
+frontend/
+
+# Next.js specific files (prevent Next.js detection)
+next.config.js
+next-env.d.ts
+.next/
+pages/
+components/
+styles/
+tailwind.config.js
+postcss.config.js 
