--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "dev": "bun run src/app.js",
     "start": "node src/app.js",
-    "build": "echo 'Build completed successfully for Vercel'",
+    "build": "echo 'API Build completed successfully for Vercel'",
     "test": "echo 'No tests specified'",
-    "vercel-build": "mkdir -p .vercel/output && echo 'Vercel build completed - no output directory needed for serverless functions'"
+    "vercel-build": "echo 'Vercel build for API serverless functions completed'"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "keywords": [
     "ai",
