--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,18 @@
       "dest": "/api/index.js"
     },
     {
+      "src": "/finlandq",
+      "dest": "/public/finlandq.html"
+    },
+    {
+      "src": "/upload",
+      "dest": "/public/upload.html"
+    },
+    {
+      "src": "/upload-text",
+      "dest": "/public/upload-text.html"
+    },
+    {
       "src": "/(.*)",
       "dest": "/public/$1"
     }
