--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "dev": "bun run src/app.js",
     "start": "node src/app.js",
-    "build": "echo 'API Build completed successfully for Vercel'",
-    "test": "echo 'No tests specified'",
-    "vercel-build": "echo 'Vercel build for API serverless functions completed'"
+    "build": "echo 'API Build completed - No Next.js here'",
+    "test": "echo 'No tests specified'"
   },
   "engines": {
     "node": ">=18.0.0"
