--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,16 @@
 {
   "version": 2,
-  "functions": {
-    "api/index.js": {
-      "maxDuration": 30
+  "name": "findlanqbot-backend-api",
+  "builds": [
+    {
+      "src": "api/**/*.js",
+      "use": "@vercel/node"
     },
-    "api/rag/upload.js": {
-      "maxDuration": 60,
-      "memory": 1024
+    {
+      "src": "public/**/*",
+      "use": "@vercel/static"
     }
-  },
+  ],
   "routes": [
     {
       "src": "/api/rag/upload",
