--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next build && next export"
+    "export": "next build && next export",
+    "vercel-build": "next build"
+
   },
   "dependencies": {
     "@copilotkit/react-core": "^1.9.3",
@@ -15,7 +17,7 @@
     "axios": "^1.6.0",
     "framer-motion": "^12.23.9",
     "lucide-react": "^0.292.0",
-    "next": "14.0.0",
+    "next": "15.1.4",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -25,7 +27,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.0",
+    "eslint-config-next": "15.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
