--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,5 @@
 {
   "version": 2,
-  "name": "findlanqbot",
-  "framework": "nextjs",
-  "buildCommand": "npm run build",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install",
-  "outputDirectory": ".next",
-  "rootDirectory": ".",
-  "env": {
-    "NEXT_PUBLIC_API_URL": "https://bot-api.finlandq.com"
-  },
-  "build": {
-    "env": {
-      "NEXT_PUBLIC_API_URL": "https://bot-api.finlandq.com"
-    }
-  }
+  "name": "findlanqbot-org2"
+
 } 
