--- a/package.json
+++ b/package.json
@@ -1,42 +1,38 @@
 {
-  "name": "findlanqbot",
-  "version": "1.0.0",
-  "description": "AI Chat Platform with Hono Backend and Next.js Frontend",
-  "main": "src/app.js",
+  "name": "findlanqbot-frontend",
+  "version": "2.0.0",
+  "description": "Frontend for FindLanQBot - Finland Migration Assistant",
+  "private": true,
   "scripts": {
-    "dev": "bun run src/app.js",
-    "start": "node src/app.js",
-    "build": "cd frontend && npm install && npm run build",
-    "vercel-build": "cd frontend && npm install && npm run build",
-    "install": "cd frontend && npm install",
-    "test": "echo 'No tests specified'"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "keywords": [
-    "ai",
-    "chat",
-    "hono",
-    "gemini"
-  ],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
-    "@langchain/google-genai": "^0.2.16",
-    "@libsql/client": "^0.14.0",
-    "@upstash/vector": "^1.2.2",
-    "axios": "^1.6.0",
-    "busboy": "^1.6.0",
-    "dotenv": "^16.3.1",
-    "formidable": "^3.5.1",
-    "hono": "^3.12.0",
-    "langchain": "^0.3.30",
-    "mammoth": "^1.9.1",
-    "sqlite3": "^5.1.6"
+    "next": "14.0.4",
+    "react": "^18",
+    "react-dom": "^18",
+    "lucide-react": "^0.294.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
-  }
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
+  },
+  "keywords": [
+    "finland",
+    "migration",
+    "frontend",
+    "nextjs",
+    "react"
+  ],
+  "author": "FindLanQBot Team",
+  "license": "MIT"
 }
