به‌روزرسانی پیکربندی پروژه با اضافه کردن تنظیمات جدید برای Upstash Vector و بهبود ساختار API. همچنین، به‌روزرسانی وابستگی‌ها در package.json و حذف کدهای قدیمی و غیرضروری. این تغییرات به بهینه‌سازی عملکرد و سازماندهی بهتر پروژه کمک می‌کند.

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+  "framework": null,
   "builds": [
     {
       "src": "src/app.js",
@@ -11,8 +12,5 @@
       "src": "/(.*)",
       "dest": "src/app.js"
     }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  ]
 }
