--- a/backend/package.json
+++ b/backend/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.2.1",
+    "@libsql/client": "^0.5.6",
     "@upstash/vector": "^1.0.0",
-    "@libsql/client": "^0.5.4",
+    "busboy": "^1.6.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "formidable": "^3.5.1",
     "hono": "^3.12.8",
-    "langchain": "^0.1.9",
+    "langchain": "^0.0.208",
     "mammoth": "^1.6.0",
     "multer": "^1.4.5-lts.1",
-    "sqlite3": "^5.1.6",
-    "cors": "^2.8.5"
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
