--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -12,5 +12,9 @@
       "src": "/(.*)",
       "dest": "src/app.js"
     }
-  ]
+  ],
+  "env": {
+    "NODE_ENV": "production",
+    "VERCEL": "1"
+  }
 }
