--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "test": "node test-upstash-vector.js"
+    "test": "node test-upstash-vector.js",
+    "init-turso": "node init-turso-tables.js",
+    "test-endpoints": "node test-endpoints.js"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.2.1",
+    "@google/generative-ai": "^0.24.1",
+    "@langchain/core": "^0.3.66",
+    "@langchain/google-genai": "^0.2.16",
     "@libsql/client": "^0.5.6",
     "@upstash/vector": "^1.0.0",
     "busboy": "^1.6.0",
@@ -20,7 +24,8 @@
     "langchain": "^0.0.208",
     "mammoth": "^1.6.0",
     "multer": "^1.4.5-lts.1",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "ulid": "^2.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
