--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint",
     "export": "next build && next export",
     "vercel-build": "next build"
-
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
+    "@ant-design/x": "^1.6.0",
     "@copilotkit/react-core": "^1.9.3",
     "@copilotkit/react-ui": "^1.9.3",
+    "antd": "^5.12.8",
     "axios": "^1.6.0",
+    "copilotkit": "^0.0.45",
     "framer-motion": "^12.23.9",
     "lucide-react": "^0.292.0",
     "next": "15.1.4",
